--- a/pages/404.md
+++ b/pages/404.md
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: "404 Page not found"
+title: "Oups, erreur 404, où êtes vous passé ?"
 permalink: /404.html
 hide: true
 ---
 
-Sorry, the requested page wasn't found on the server.
+Je suis désolé, je ne sais pas du tout comment vous êtes arrivé ici...
